<resources>
    <!--For bottom navigation do not change -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Check-up</string>
    <string name="title_notifications">History</string>

    <string name="app_name">PST</string>
    <string name="check_up">Check-up</string>

    <string name="check_">check-up</string>
    <string name="portfolio">Portfolio</string>
    <string name="editTextPhone">editTextPhone</string>
    <string name="edit">edit</string>
    <string name="Email">Email</string>
    <string name="number" />
    <string name="number2">Numéro de téléphone</string>
    <string name="profil">Profil</string>
    <string name="adresse">Adresse</string>
    <string name="email">\@ Email</string>
    <string name="n_de_t_l_phone">N° de téléphone</string>
    <string name="Nom_Prenom">Nom Prénom</string>
    <string name="elipse1">elipse1</string>
    <string name="autoeval">AUTOeval</string>
    <string name="btnPortfolio">Btnportfolio</string>
    <string name="history">History</string>
    <string name="SOS">sos</string>
    <string name="menu">menu</string>
    <string name="heartrate">hrtrate</string>
    <string name="temperature">temp</string>
    <string name="spo2">sp02</string>
    <string name="bloodpressure">bldpressr</string>
    <string name="elipse2etdemi">elipse2etdemi</string>
    <string name="elipse3">elipse3</string>
    <string name="retour">retour</string>
    <string name="menumode">menumode_</string>
    <string name="addDoc">adddocument</string>
    <string name="ConsultDoc">ConsultDoc</string>
    <string name="elipse4">elipse4</string>
    <string name="elipse5">elipse5</string>
    <string name="help">help</string>
    <string name="petitdetail">petitDetail</string>
    <string name="toutpetitdetail">toutpetitdetail</string>
    <string name="checkupbtn">checkupbutton</string>
    <string name="elipse0">elipse0</string>
    <string name="casa">casa</string>
    <string name="editTextLogin">"edit test "</string>
    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_home">Home</string>
    <string name="bottom_navigation_menu_checkup">Check-up</string>
    <string name="bottom_navigation_menu_history">History</string>
<<<<<<< HEAD


    <!--Christine's addition-->
    <string name="app">CalendarAppExample</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>

    <string name="eventcell">Event</string>
    <string name="calendarcell">1</string>
    <string name="autoevaltext">Today\'s Evaluation</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="check">Check out all your Symptoms</string>

    <string name="elipse9">elipse9</string>
    <string name="elipse10">elipse10</string>
    <string name="gobacks">gbcks</string>
    <string name="helpe">Helpe</string>
    <string name="Help">Help</string>
    <string name="please_te_us_how_we_can_help_or_improve_we_will_email_you_back_as_soon_as_possible">Please te us how we can help or improve we will email you back as soon as possible !</string>
    <string name="multiline">multiline</string>
    <string name="type_your_request_here">Type your request here</string>
    <string name="profilpric" />
    <string name="profilprics">profpic</string>
    <string name="home">Home</string>
    <string name="profilpicface">profilpickface</string>
    <string name="Heartrate">hrtrte</string>

</resources>
=======
</resources>
>>>>>>> fc87c51c0c8563fa9d06b8df344f46fc130f0748
