<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:foregroundTint="#390808"
    android:textAlignment="center"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">


    <TextView
        android:id="@+id/textHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="none"
        android:fontFamily="sans-serif-black"
        android:text="@string/home"
        android:textColor="#7A2328"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="73dp"
        android:layout_height="99dp"
        android:contentDescription="@string/elipse0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/ellipse_8" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="34dp"
        android:layout_height="67dp"
        android:contentDescription="@string/elipse1"
        android:rotationY="184"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/ellipse_8" />

    <ImageButton
        android:id="@+id/checkup_button"
        android:layout_width="380dp"
        android:layout_height="72dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/checkupbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267"
        app:srcCompat="@drawable/groups_list_button"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/autoevalbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FAFAFA"
        android:contentDescription="@string/autoeval"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkup_button"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/auto_eval"
        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/portfolioboutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="264dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/btnPortfolio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoevalbutton"
        app:layout_constraintVertical_bias="0.011"
        app:srcCompat="@drawable/portfolio"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/historybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portfolioboutton"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="@drawable/history"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/sosbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/SOS"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historybutton"
        app:layout_constraintVertical_bias="0.692"
        app:srcCompat="@drawable/sos" />

    <ImageButton
        android:id="@+id/profilpicface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/profilpicface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/group_7" />


    <ImageButton
        android:id="@+id/imageView33"
        android:layout_width="74dp"
        android:layout_height="62dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toEndOf="@+id/imageView37"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989"
        app:srcCompat="@drawable/personal_list" />

    <ImageButton
        android:id="@+id/imageView37"
        android:layout_width="78dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993"
        app:srcCompat="@drawable/checkupicon" />

    <ImageButton
        android:id="@+id/imageView38"
        android:layout_width="77dp"
        android:layout_height="68dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView37"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993"
        app:srcCompat="@drawable/homeicon" />

<!--Don't replace fragment with androidx.fragment.app.FragmentContainerView-->
    <!--It would make the program crash-->

</androidx.constraintlayout.widget.ConstraintLayout>