<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".HelpActivity">

    <ImageView
        android:id="@+id/elipse10"
        android:layout_width="60dp"
        android:layout_height="110dp"
        android:contentDescription="@string/elipse10"
        android:rotationY="176"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946"
        app:srcCompat="@drawable/ellipse_8" />

    <ImageView
        android:id="@+id/elipse9"
        android:layout_width="80dp"
        android:layout_height="159dp"
        android:contentDescription="@string/elipse9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903"
        app:srcCompat="@drawable/ellipse_8" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/gobacks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/vector" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="148dp"
        android:layout_height="61dp"
        android:text="@string/Help"
        android:textColor="#7A2328"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <LinearLayout
        android:layout_width="355dp"
        android:layout_height="153dp"
        android:background="#7A2328"
        android:backgroundTint="#7A2328"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:text="@string/please_te_us_how_we_can_help_or_improve_we_will_email_you_back_as_soon_as_possible"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="269dp"
        android:layout_height="70dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/type_your_request_here"
        android:inputType="textMultiLine"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:backgroundTint="@color/pink"
        android:onClick="saveAction"
        android:text="Submit"
        android:textColor="@color/app"
        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />


</androidx.constraintlayout.widget.ConstraintLayout>